--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -44,6 +44,7 @@
 .pl__jumbotron {
     position: relative;
     margin: 3.73em auto;
+    margin-bottom: 0;
     max-width: 100%;
     height: 339px;
     background-color: #ffb500;
