--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,5 +1,6 @@
 .container {
     max-width: 1500px;
+    margin-top: 3em;
 }
 .pl__news__item {
     position: relative;
