--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,7 +8,7 @@ body {
     line-height: 1.5;
     font-family: 'Ubuntu', sans-serif;
     background-color: rgb(230, 236, 240);
-    overflow-x: hidden;
+    // overflow-x: hidden;
 }
 .pl__section__header {
     color: white;
